--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,12 @@
 {
     "printWidth": 120,
     "tabWidth": 4,
-    "useTabs": false,
-"singleQuote": true,
+    "useTabs": true,
+    "singleQuote": true,
     "trailingComma": "all",
     "bracketSpacing": true,
     "jsxBracketSameLine": false,
     "arrowParens": "always",
-    "semi": false,
+    "semi": true,
     "endOfLine": "auto"
 }
